<resources>
    <string name="app_name">PloarBear</string>
    <string name="version">Beta1.0</string>
    <string name="account_hint">账号/邮箱</string>
    <string name="password_hint">密码</string>
    <string name="manage">管理</string>
    <string name="accounts_on_this_device">此设备上的账号</string>
    <string name="account">账号</string>
    <string name="nickname">昵称</string>
    <string name="sign_up_hint">没有账号?注册一个!</string>
    <string name="sign_up">注册账号</string>
    <string name="sign_use_email">使用邮箱注册</string>
    <string name="get_email_code">获取验证码</string>
    <string name="sending_email_code">正在发送</string>
    <string name="email_code_sent">验证码已发送</string>
    <string name="email_code_sent_failed">验证码发送失败</string>
    <string name="email">邮箱</string>
    <string name="validation">验证码</string>
    <string name="next_step">下一步</string>
    <string name="setup_password">设置密码</string>
    <string name="done">完成</string>
    <string name="undefine">未定义</string>
    <string name="message">消息</string>
    <string name="contacts">联系人</string>
    <string name="tools">工具</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">设置</string>
    <string name="loading">加载中</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="mail_format_error">邮箱格式不正确</string>
    <string name="code_format_error">验证码格式不正确</string>
    <string name="email_code_not_correct">验证码错误</string>
    <string name="validating">验证中</string>
    <string name="sign_up_success">注册成功</string>
    <string name="sign_up_failure">注册失败</string>
    <string name="password_format_error">密码格式不正确</string>
    <string name="dialog">对话框</string>
    <string name="title">标题</string>
    <string name="on_login">登录中</string>
    <string name="network_error">网络错误</string>
    <string name="account_or_passwd_not_correct">帐号或密码错误</string>
    <string name="account_format_error">帐号格式错误</string>
    <string name="email_already_in_use">该邮箱已经注册</string>
    <string name="account_reference">帐号相关</string>
    <string name="personal_page">个人主页</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>