<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signup_activity.setup_fragments.SetupEmailFragment"
    android:orientation="vertical">
    <TextView
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/sign_use_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:layout_margin="20dp"
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_round_corners"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/validation_code"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:layout_weight="3"
            android:hint="@string/validation"
            android:layout_gravity="center"
            android:background="@drawable/input_round_corners"
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/get_validation_code"
            android:textColor="@color/white"
            android:text="@string/get_email_code"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_blue_button_bg"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/next_button"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:background="@drawable/round_blue_button_bg"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>