<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signup_activity.setup_fragments.SetupPasswordFragment"
    android:orientation="vertical">
    <TextView
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/setup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:layout_margin="20dp"
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_round_corners"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/done_button"
        android:text="@string/done"
        android:textColor="@color/white"
        android:background="@drawable/round_blue_button_bg"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>